fixup: usability and code legibility tweaks

--- a/apps/view/src/styles/skins.css
+++ b/apps/view/src/styles/skins.css
@@ -11,7 +11,7 @@
 }
 
 .bg-gradient {
-  background: radial-gradient(#eee, #999);
+  background: radial-gradient(#eee, #777);
 }
 
 .scrollbar-white,
